--- a/tehilimlibrary/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/tehilimlibrary/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -1,10 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
+
+    <!--<include layout="@layout/toolbar_layout" />-->
 
     <fragment
+        android:layout_below="@+id/app_toolbar"
         android:id="@+id/navigation_drawer"
         android:name="com.karriapps.tehilim.tehilimlibrary.fragments.NavigationDrawerFragment"
         android:layout_width="@dimen/side_panel_width"
@@ -12,10 +15,12 @@
         android:layout_gravity="start" />
 
     <fragment
+        android:layout_below="@+id/app_toolbar"
         android:id="@+id/main_fragment"
         android:name="com.karriapps.tehilim.tehilimlibrary.fragments.MainFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_toRightOf="@id/navigation_drawer"
         android:layout_toEndOf="@id/navigation_drawer" />
 
 </RelativeLayout>
