--- a/tehilimlibrary/src/main/res/layout/activity_main.xml
+++ b/tehilimlibrary/src/main/res/layout/activity_main.xml
@@ -1,21 +1,31 @@
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 
-    <fragment
-        android:id="@+id/main_fragment"
-        android:name="com.karriapps.tehilim.tehilimlibrary.fragments.MainFragment"
+    <!--<include layout="@layout/toolbar_layout" />-->
+
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
-    <fragment
-        android:id="@+id/navigation_drawer"
-        android:name="com.karriapps.tehilim.tehilimlibrary.fragments.NavigationDrawerFragment"
-        android:layout_width="@dimen/side_panel_width"
-        android:layout_height="match_parent"
-        android:layout_gravity="start" />
 
-</android.support.v4.widget.DrawerLayout>
+        <fragment
+            android:id="@+id/main_fragment"
+            android:name="com.karriapps.tehilim.tehilimlibrary.fragments.MainFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+
+        <fragment
+            android:id="@+id/navigation_drawer"
+            android:name="com.karriapps.tehilim.tehilimlibrary.fragments.NavigationDrawerFragment"
+            android:layout_width="@dimen/side_panel_width"
+            android:layout_height="match_parent"
+            android:layout_gravity="start" />
+
+    </android.support.v4.widget.DrawerLayout>
+
+</LinearLayout>
