--- a/tehilimlibrary/src/main/res/layout/bookmark_row.xml
+++ b/tehilimlibrary/src/main/res/layout/bookmark_row.xml
@@ -16,7 +16,7 @@
         android:textColor="#000"
         android:gravity="start|center_vertical" />
 
-    <EditText
+    <com.eyeem.chips.ChipsEditText
         android:paddingRight="5dp"
         android:paddingLeft="5dp"
         android:id="@+id/bookmark_row_text"
