--- a/tehilimlibrary/src/main/res/layout/activity_main.xml
+++ b/tehilimlibrary/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
 
     <!--<include layout="@layout/toolbar_layout" />-->
 
-    <android.support.v4.widget.DrawerLayout
+    <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -26,6 +26,6 @@
             android:layout_height="match_parent"
             android:layout_gravity="start" />
 
-    </android.support.v4.widget.DrawerLayout>
+    </androidx.drawerlayout.widget.DrawerLayout>
 
 </LinearLayout>
