--- a/tehilimlibrary/src/main/res/layout/toolbar_layout.xml
+++ b/tehilimlibrary/src/main/res/layout/toolbar_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/app_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
